// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner component should match default snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa jbEdkI"
  />
</div>
`;

exports[`Spinner component should match snapshot with custom border width 1`] = `
<div>
  <div
    class="sc-bdVaJa fcBMdT"
  />
</div>
`;

exports[`Spinner component should match snapshot with width custom color 1`] = `
<div>
  <div
    class="sc-bdVaJa bgVcLw"
    color="#333"
  />
</div>
`;

exports[`Spinner component should match snapshot with width custom size 1`] = `
<div>
  <div
    class="sc-bdVaJa jbEdkI"
  />
</div>
`;
